# libora

./: .gitignore  CMakeLists.txt  LICENSE.txt  README  doxygen.in
src/: internal.h  ora.c  ora.h
src/layers/: layers.c  layers.h  stack.h  stack_parser.c
src/lib/: CMakeLists.txt  internal.c  internal.h  ora.c  ora.h
src/lib/layers/: layers.c  layers.h  stack.c  stack.h  stack_parser.c  stack_parser.h
src/lib/layers/generate/: README  c_expat.tmpl  genesx.py  orastack.py
src/lib/utils/: stringbuffer.c  stringbuffer.h
src/lib/zip/: unzip.c  zip.c  zip.h
src/tool/: CMakeLists.txt  oratool.c
src/zip/: unzip.h  zip.c  zip.h
