PROJECT (ora)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(DEBUG_DEFAULT FALSE CACHE BOOL "Enable debug output by default")

IF (DEBUG_DEFAULT)
	ADD_DEFINITIONS(-DDEBUG)
ENDIF(DEBUG_DEFAULT)

INCLUDE(FindZLIB)
INCLUDE(FindPNG)
INCLUDE(FindLibXml2)

ADD_DEFINITIONS(${PNG_DEFINITIONS})
ADD_DEFINITIONS(${LIBXML2_DEFINITIONS})

LINK_LIBRARIES(${PNG_LIBRARIES} ${ZLIB_LIBRARIES} ${LIBXML2_LIBRARIES} ora)

IF (WIN32)
#ADD_LIBRARY(camalay STATIC ./src/layers/layer.c ./src/layers/png.c ./src/ora.c)
ENDIF (WIN32)

IF (UNIX)
ADD_LIBRARY(ora SHARED ./src/ora.c ./src/zip/unzip.c ./src/zip/ioapi.c ./src/layers/layers.c)
ENDIF (UNIX)

ADD_EXECUTABLE(oratool ./src/tool/oratool.c)

INCLUDE_DIRECTORIES(AFTER ${ZLIB_INCLUDE_DIR} ${PNG_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR})

SET(HEADER_FILES ./src/ora.h)

#IF (WIN32)
#	INSTALL(TARGETS ora RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX})
#	INSTALL(FILES ${HEADER_FILES} DESTINATION include)
#ENDIF (WIN32)

IF (UNIX)
INSTALL(TARGETS oratool RUNTIME DESTINATION bin)
INSTALL(TARGETS ora LIBRARY DESTINATION lib)
INSTALL(FILES ${HEADER_FILES} DESTINATION include/camalay)
ENDIF (UNIX)


SET(GENERATE_DOC FALSE CACHE BOOL "Generate Doxygen documentation")

IF (GENERATE_DOC)

	INCLUDE(FindDoxygen)

	IF(DOXYGEN_FOUND)
		MAKE_DIRECTORY(${CMAKE_CURRENT_BINARY_DIR}/doc/)
		ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/doc/index.php
			COMMAND ${DOXYGEN_EXECUTABLE}
			${CMAKE_CURRENT_SOURCE_DIR}/doxygen.config
			DEPENDS ${HEADER_FILES}
			COMMENT "Building libora Documentation"
		)
		ADD_CUSTOM_TARGET(OraDoc ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doc/index.php)
	ENDIF(DOXYGEN_FOUND)
ENDIF (GENERATE_DOC)

