PROJECT (ora)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(DEBUG_DEFAULT FALSE CACHE BOOL "Enable debug output by default")

IF (DEBUG_DEFAULT)
	ADD_DEFINITIONS(-DDEBUG)
ENDIF(DEBUG_DEFAULT)

INCLUDE(FindZLIB)
INCLUDE(FindPNG)
INCLUDE(FindEXPAT)
ADD_DEFINITIONS(${PNG_DEFINITIONS})
LINK_LIBRARIES(${PNG_LIBRARIES} ${ZLIB_LIBRARIES} ${EXPAT_LIBRARIES} ora)
INCLUDE_DIRECTORIES(AFTER ${ZLIB_INCLUDE_DIR} ${PNG_INCLUDE_DIR} ${EXPAT_INCLUDE_DIRS} src/lib)

ADD_SUBDIRECTORY(src/lib)

ADD_SUBDIRECTORY(src/tool)

#IF (WIN32)
#	INSTALL(TARGETS ora RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX} ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX})
#	INSTALL(FILES ${HEADER_FILES} DESTINATION include)
#ENDIF (WIN32)



SET(GENERATE_DOC FALSE CACHE BOOL "Generate Doxygen documentation")

IF (GENERATE_DOC)

	INCLUDE(FindDoxygen)

	IF(DOXYGEN_FOUND)
		MAKE_DIRECTORY(${CMAKE_CURRENT_BINARY_DIR}/doc/)
		ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/doc/index.php
			COMMAND ${DOXYGEN_EXECUTABLE}
			${CMAKE_CURRENT_SOURCE_DIR}/doxygen.config
			DEPENDS ${HEADER_FILES}
			COMMENT "Building libora Documentation"
		)
		ADD_CUSTOM_TARGET(OraDoc ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doc/index.php)
	ENDIF(DOXYGEN_FOUND)
ENDIF (GENERATE_DOC)

